# NCIP

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE.Apache.txt  LICENSE.MIT.txt  README.md
.github/workflows/: publish.yml
doc/: Api-Bmc.md  Format-Aiger.md  Format-Cip.md  Format-Dimspec.md
doc/images/: bounded_model_checking.drawio  craig_interpolation.drawio  ncip_overview.drawio
src/: bmc-format-aig.cpp  bmc-format-aig.hpp  bmc-format-cip.cpp  bmc-format-cip.hpp  bmc-format-dimspec.cpp  bmc-format-dimspec.hpp  bmc-io-aig.cpp  bmc-io-aig.hpp  bmc-io-cip.cpp  bmc-io-cip.hpp  bmc-io-dimspec.cpp  bmc-io-dimspec.hpp  bmc-ncip-backend-cadicraig-debug.hpp  bmc-ncip-backend-cadicraig.hpp  bmc-ncip-backend-kittencraig.hpp  bmc-ncip-backend-minicraig-debug.hpp  bmc-ncip-backend-minicraig.hpp  bmc-ncip-backend.hpp  bmc-ncip-impl.hpp  bmc-ncip-portfolio.hpp  bmc-ncip.cpp  bmc-ncip.hpp  bmc-problem.cpp  bmc-problem.hpp  bmc-prover.cpp
util/: wrapper-hwmcc24.in  wrapper-hwmcc25.in
